# supportagent

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
backend/: .dockerignore  Dockerfile  config.py  db.py  main.py  observability.py  pyproject.toml
backend/agent/: calendar_service.py  notifier.py  orchestrator.py  prompts.py  rag.py  tools.py
backend/evals/: golden_dataset.py  judge.py  runner.py
backend/ingest/: firecrawl_loader.py
backend/routers/: admin.py  chat.py  voice.py
backend/scripts/: get_google_token.py
backend/tests/: conftest.py  test_admin.py  test_chat.py  test_eval.py  test_health.py  test_prompts.py  test_rag.py  test_tools.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prebuilt  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatAgent.tsx  ErrorBoundary.tsx  UserInfoGate.tsx  VoiceAgent.tsx
frontend/src/components/admin/: AdminLogin.tsx  AdminPanel.tsx  EvalPanel.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  (+3 more)
frontend/src/lib/: api.ts
terraform/environments/dev/: main.tf  providers.tf
terraform/environments/production/: main.tf  providers.tf  variables.tf
terraform/environments/staging/: main.tf  providers.tf
terraform/modules/backend/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudsql/: main.tf  outputs.tf  variables.tf
terraform/modules/frontend/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
