[project]
name = "relaypay-support-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "openai>=1.50.0",
    "pgvector>=0.3.0",
    "asyncpg>=0.29.0",
    "firecrawl-py>=1.0.0",
    "openai-agents>=0.0.10",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
]

[tool.setuptools.packages.find]
include = ["agent*", "ingest*", "routers*", "evals*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
